--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "@types/react-redux": "^7.1.24",
     "bootstrap": "^5.2.0",
     "emailjs-com": "^3.2.0",
     "react": "^18.1.0",
