--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
     "emailjs-com": "^3.2.0",
+    "history": "^5.3.0",
     "react": "^18.1.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.1.0",
