--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "5.0.0",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
+    "terser": "^5.15.0",
     "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
   },
