--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@types/react-redux": "^7.1.24",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
+    "cors": "^2.8.5",
     "ejs": "^3.1.8",
     "emailjs-com": "^3.2.0",
     "history": "^5.3.0",
