--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/react-redux": "^7.1.24",
     "axios": "^0.27.2",
+    "beautiful-react-hooks": "^3.11.1",
     "bootstrap": "^5.2.0",
     "cors": "^2.8.5",
     "ejs": "^3.1.8",
@@ -21,6 +22,7 @@
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
